--- a/WebVisualizations/cloudiness.html
+++ b/WebVisualizations/cloudiness.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web Design Homework</title>
+    <title>Latitude vs. Cloudiness</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -42,5 +42,70 @@
             </ul>
         </div>            
     </nav>                   
+    <div class="parent-container d-flex">
+        <div class="container index_container1_specs">
+            <div class="row">
+                <div class="col">
+                    <br>
+                    <h3 style="color:teal">
+                        Latitude vs. Cloudiness
+                    </h3>
+                    <hr> 
+                    <section id="index_main">
+                        <section id="index_figure">
+                            <img id="index_main_image" src="Resources/assets/images/Fig3.png" alt="Latitue vs. Cloudiness">
+                        </section>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum aut numquam magnam atque totam reprehenderit, tenetur, laudantium porro enim, rem eos et eius! Sequi, modi suscipit maxime quod porro laboriosam.                        
+                        </p>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <div class="container separation"></div>
+        <div class="container index_container2_specs">            
+            <br>
+            <h4 style="color:teal">
+                Visualizations
+            </h4>
+            <hr>
+            <div class="row">
+                <div class="col-lg-6">
+                    <figure class="figure">
+                        <figcaption class="figure-caption figure_caption" style="color:teal">Max Temperature</figcaption>
+                        <a href="max_temperature.html">
+                            <img width="350" height="300" src="Resources/assets/images/Fig1.png" class="figure-img img-fluid rounded" alt="Latitue vs. Max Temperature">
+                        </a>
+                    </figure>
+                </div>
+                <div class="col-lg-6">
+                    <figure class="figure">
+                        <figcaption class="figure-caption figure_caption" style="color:teal">Humidity</figcaption>
+                        <a href="humidity.html">
+                            <img width="350" height="300" src="Resources/assets/images/Fig2.png" class="figure-img img-fluid rounded" alt="Latitue vs. Humidity">
+                        </a>
+                    </figure>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <figure class="figure">
+                        <figcaption class="figure-caption figure_caption" style="color:teal">Cloudiness</figcaption>
+                        <a href="cloudiness.html">
+                            <img width="350" height="300" src="Resources/assets/images/Fig3.png" class="figure-img img-fluid rounded" alt="Latitue vs. Cloudiness">
+                        </a>
+                    </figure>
+                </div>
+                <div class="col-lg-6">
+                    <figure class="figure">
+                        <figcaption class="figure-caption figure_caption" style="color:teal">Wind Speed</figcaption>
+                        <a href="wind_speed.html">
+                            <img width="350" height="300" src="Resources/assets/images/Fig4.png" class="figure-img img-fluid rounded" alt="Latitue vs. Wind Speed">
+                        </a>
+                    </figure>
+                </div>
+            </div>        
+        </div>        
+    </div>
 </body>
 </html>
