--- a/WebVisualizations/index copy.html
+++ b/WebVisualizations/index copy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Comparisonk</title>
+    <title>Web Design Homework</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -41,48 +41,49 @@
                 </li>
             </ul>
         </div>            
-    </nav>
-    <div class="container data_container_specs">
-        <br>
-        <h3 style="color:teal">
-            Comparison: Latitude vs.
-        </h3>
-        <hr> 
-        <h7>
-            Click any plot to get an in-depth analysis. 
-        </h7>
-        <br>
+    </nav>                   
+    <div class="container">
         <div class="row">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-4">
+            <div class="col-lg-7">
+                <br>
+                <h3 style="color:teal">
+                    Summary: Latitude vs. X
+                </h3>
+                <hr> 
+                <section id="index_main">
+                    <section id="index_figure">
+                        <img id="index_main_image" src="Resources/assets/images/Fig1.png" alt="Latitue vs. Max Temperature">
+                    </section>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum risus ut justo laoreet consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc dui neque, malesuada egestas aliquet ac, commodo in magna. Etiam mollis odio at mi maximus hendrerit. Integer aliquam id lectus nec hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris rhoncus eget nulla in ornare. Maecenas massa nibh, commodo non condimentum eu, congue tempus neque. Donec neque mi, ullamcorper eget fringilla et, iaculis vitae tortor. Curabitur vel nunc vel mi lobortis ornare ut non nulla. Etiam ornare libero ac suscipit aliquam.
+                    </p>
+                </section>
+            </div>
+            <div class="col-lg-1 separation"></div>
+            <div class="col-lg-4">            
+                <br>
+                <h4 style="color:teal">
+                    Visualizations
+                </h4>
+                <hr>
                 <figure class="figure">
                     <figcaption class="figure-caption figure_caption" style="color:teal">Max Temperature</figcaption>
                     <a href="max_temperature.html">
                         <img width="350" height="300" src="Resources/assets/images/Fig1.png" class="figure-img img-fluid rounded" alt="Latitue vs. Max Temperature">
                     </a>
                 </figure>
-            </div>
-            <div class="col-lg-4">
                 <figure class="figure">
                     <figcaption class="figure-caption figure_caption" style="color:teal">Humidity</figcaption>
                     <a href="humidity.html">
                         <img width="350" height="300" src="Resources/assets/images/Fig2.png" class="figure-img img-fluid rounded" alt="Latitue vs. Humidity">
                     </a>
                 </figure>
-            </div>
-            <div class="col-lg-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-4">
                 <figure class="figure">
                     <figcaption class="figure-caption figure_caption" style="color:teal">Cloudiness</figcaption>
                     <a href="cloudiness.html">
                         <img width="350" height="300" src="Resources/assets/images/Fig3.png" class="figure-img img-fluid rounded" alt="Latitue vs. Cloudiness">
                     </a>
                 </figure>
-            </div>
-            <div class="col-lg-4">
                 <figure class="figure">
                     <figcaption class="figure-caption figure_caption" style="color:teal">Wind Speed</figcaption>
                     <a href="wind_speed.html">
@@ -90,8 +91,7 @@
                     </a>
                 </figure>
             </div>
-            <div class="col-lg-2"></div>
-        </div>        
+        </div>
     </div>        
 </body>
 </html>
