--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web Design Homework</title>
+    <title>Index</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -51,20 +51,24 @@
                         Summary: Latitude vs. X
                     </h3>
                     <hr> 
-                    <section class="float_left">                    
-                        <img width="350" height="300" src="Resources/assets/images/Fig1.png" class="figure-img img-fluid rounded" alt="Latitue vs. Max Temperature">
+                    <section id="index_main">
+                        <section id="index_figure">
+                            <img id="index_main_image" src="Resources/assets/images/Fig1.png" alt="One of images">
+                        </section>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam accusamus repudiandae ipsum illum quaerat ad repellat perspiciatis dignissimos in debitis esse unde blanditiis, sint, exercitationem accusantium. Consequuntur doloremque modi repudiandae!
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, ipsa? Illo odio sunt deleniti nisi voluptas ab amet provident rerum, expedita ut optio ullam voluptatum vel est cum velit suscipit.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum risus ut justo laoreet consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc dui neque, malesuada egestas aliquet ac, commodo in magna. Etiam mollis odio at mi maximus hendrerit. Integer aliquam id lectus nec hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris rhoncus eget nulla in ornare. Maecenas massa nibh, commodo non condimentum eu, congue tempus neque. Donec neque mi, ullamcorper eget fringilla et, iaculis vitae tortor. Curabitur vel nunc vel mi lobortis ornare ut non nulla. Etiam ornare libero ac suscipit aliquam.
                         </p>
                     </section>
                 </div>
             </div>
         </div>
         <div class="container separation"></div>
-        <div class="container index_container2_specs">
+        <div class="container index_container2_specs">            
+            <br>
+            <h4 style="color:teal">
+                Visualizations
+            </h4>
+            <hr>
             <div class="row">
                 <div class="col-lg-6">
                     <figure class="figure">
