--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -19,8 +19,8 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse navbar_styling" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-sm-auto d-none d-sm-flex navbar_styling">
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Plots
@@ -41,7 +41,7 @@
             </ul>
         </div>            
     </nav>                   
-    <div class="container data_container_specs">
+    <div class="container data_container_specs margin_adjuster table_overflow">
         <br>
         <h3 style="color:teal">
             Data
@@ -51,7 +51,7 @@
             The following table includes all of the data used for plotting during this project. 
         </h7>
         <br>   
-        <table class="table table-striped">
+        <table class="table table-md table-striped">
          <tr>
           <th scope="col">City_ID</th>
           <th scope="col">City</th>
